--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "Web application for transfering data",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
-  },
+  "start": "node server.js",
+  "test": "node server.js"
+}
   "author": "vivek-17",
   "license": "ISC",
   "dependencies": {
